--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "rest.api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
+    "start": "node dist/app.js",
     "test": "jest"
   },
   "keywords": [],
@@ -23,6 +24,7 @@
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
